# crucible

./: .gitignore  EXECUTION_PLAN.md  README.md  pyproject.toml
docs/: FUTURE-WORK.md  agentic-harness-prd-v5.2.md  agentic-harness-spec-v5.2.md  agentic-harness-technical-design-v5.2.md  architecture.md  crucible-spec-v5.3.md  crucible-spec-v5.4.md  crucible-spec-v6-review-notes.md  crucible-spec-v6.1.md  crucible-spec-v6.md  crucible-spec-v7-draft1.md  crucible-spec-v7.1.md  crucible-spec-v7.2.md  crucible-spec-v7.3.1.md  crucible-spec-v7.3.2.md  crucible-spec-v7.3.md  crucible-spec-v7.md  execution-plan-v3-validation-review.md  execution-plan-v5.4.md  execution-plan-v6.1.md  execution-plan-v6.md  openclaw-entry.md
docs/feedback/: 2026-04-11-openclaw-front-door-note.md
docs/implementation/: phase-1-build-notes.md  phase-2-build-notes.md  phase-3-build-notes.md  phase-4-build-notes.md  phase-5-build-notes.md  phase-6-build-notes.md
docs/references/: agentic-toolkit-architecture-v4.6.2.md
docs/reviews/: crucible-spec-v7.2-review.md  crucible-spec-v7.3-review.md  phase-1-review-r2.md  phase-1-review-r3.md  phase-1-review.md  phase-2-review-r2.md  phase-2-review.md
docs/validation/: final-review.md
evals/swebench-verified/: mini-pilot.json  starter-batch.json
relative-runs/run-d64be41e2d38/: events.jsonl  run.json  tasks.json
skills/openclaw/: SKILL.md
src/crucible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/accelerators/: test_adapters.py  test_capabilities.py  test_phase6_v2_fixes.py  test_router.py
tests/ambiguity/: test_ambiguity_gate.py  (+1 more)
(+238 files in other folders)
