[project]
name = "crucible"
version = "0.1.0"
description = "General harness architecture for chat-native delegation into reliable, long-running software execution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
crucible = "crucible.runtime.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: exercises real toolchain provisioning paths",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120
